Add styling and preliminary jquery

--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+    <link rel="stylesheet" href="css/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  <title>To-Do JQuery App</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <div id="container">
+
+  <h1>To-Do JQuery App</h1>
+
+  <div id="appList">
+    <form name="appForm">
+      <input type="text" name="toDoItem">
+    </form>
+    <div id="addButton">+ List Item</div>
+    <ol></ol>
+  </div>
+
+  </div>
 </body>
 </html>
