--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  <script src="js/main.js"></script>
+  <script src="js/sortable.js"></script>
   <title>To-Do JQuery App</title>
 </head>
+
 <body>
   <div id="container">
-
   <h1>To-Do JQuery App</h1>
-
   <div id="appList">
     <form name="appForm">
-      <input type="text" name="toDoItem">
+      <input type="text" name="toDoItem" value="Add an Item">
     </form>
-    <div id="addButton">+ List Item</div>
+    <div id="addButton" class = "grow">+ List Item</div>
+    <br>
     <ol></ol>
   </div>
+</div>
 
-  </div>
 </body>
+
 </html>
