Add local storage functionality

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div id="addButton" class = "grow">+ List Item</div>
     <br>
     <ol></ol>
+    <div id="clearButton" class = "grow">Clear List</div>
   </div>
 </div>
 
