--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
 
 <body>
   <div id="container">
-  <h1>To-Do JQuery App</h1>
+  <h1>To Do JQuery App</h1>
+  <p class ="instructions">Add an item below or double click on an item in the list to remove it.</p>
   <div id="appList">
     <form name="appForm">
       <input type="text" name="toDoItem" value="Add an Item">
     </form>
     <div id="addButton" class = "grow">+ List Item</div>
     <br>
-    <ol></ol>
+    <div id ="itemList">
+      <ol></ol>
+    </div>
+    </div>
     <div id="clearButton" class = "grow">Clear List</div>
   </div>
 </div>
